--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "history-server",
   "version": "0.1.0",
   "description": "An HTTP server for single-page apps that use the HTML5 history API",
-  "repo": "mjackson/history-server",
+  "repository": "mjackson/history-server",
   "author": "Michael Jackson",
   "license": "MIT",
   "bin": {
