Prefer global install

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "An HTTP server for single-page apps that use the HTML5 history API",
   "repository": "mjackson/history-server",
+  "preferGlobal": true,
   "author": "Michael Jackson",
   "license": "MIT",
   "bin": {
