--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "history-server": "./bin/history-server-cli.js"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "glob": "^7.1.1"
   },
   "keywords": [
     "history",
