--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "express": "^4.14.0",
-    "glob": "^7.1.1"
+    "glob": "^7.1.1",
+    "http-proxy": "^1.16.2"
   },
   "keywords": [
     "history",
